--- a/geekLogin/static/css/style.css
+++ b/geekLogin/static/css/style.css
@@ -1,50 +1,60 @@
-.header {
-	padding: 5px 120px;
-	width: 150px;
-	height: 70px;
-	background-color: #236B8E;
+.login-col-right {
+  background-size: cover;
+  padding: 0;
 }
 
-.border {
-	padding: 80px 50px;
-	width: 400px;
-	height: 450px;
-	border: 1px solid #236B8E;
-	border-radius: 0px;
-	background-color: #9AC0CD;
+.login-box,
+.vertical-center {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+  width: 100%;
+  padding: 10px;
+}
+
+.wrap-form-login {
+  width: 300px;
+  display: block;
+  text-align: left;
+  margin: auto;
+  max-width: 90%;
+  font-weight: bold;
+}
+
+.wrap-form-login .field-wrapper {
+  min-height: 58px;
+}
+
+.invalid-feedback {
+  display: none;
+  margin: 10px 0 5px;
+  margin-top: 0.25rem;
+  font-size: 0.875rem;
+  color: #dc3545;
 }
 
 .btn {
-	padding: 10px 40px;
-	background-color: #236B8E;
-	color: #FFFFFF;
-	font-style: oblique;
-	font-weight: bold;
-	border-radius: 10px;
-}
-
-.textbox {
-	padding: 10px 40px;
-	background-color: #236B8E;
-	text-color: #FFFFFF;
-	border-radius: 10px;
-}
-
-::placeholder {
-	color: #FFFFFF;
-	opacity: 1;
-	font-style: oblique;
-	font-weight: bold;
-}
-
-.word {
-	color: #FFFFFF;
-	font-style: oblique;
-	font-weight: bold;
-}
-
-.bottom {
-	color: #236B8E;
-	font-style: oblique;
-	font-weight: bold;
+  width: 100%;
+  background: #1ba0db;
+  color: #fff;
+  text-transform: uppercase;
+  margin-top: 5px;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 400;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
+    box-shadow 0.15s ease-in-out;
 }
